feat: add 3 page and content witnh styles

--- a/index.html
+++ b/index.html
@@ -5,10 +5,54 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- google font start  -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
+  <!-- google font end  -->
+  <!-- style start -->
+  <link rel="stylesheet" href="css/styles.css">
+  <!-- style end  -->
   <title>Music Store</title>
 </head>
 
 <body>
+  <!-- page header start -->
+  <header>
+    <h1 class="header__title">Music Store</h1>
+    <nav class="header__nav">
+      <ul class="nav__list-items">
+        <li class="nav__list-item">
+          <a href="/index.html">Home</a>
+        </li>
+        <li class="nav__list-item">
+          <a href="products.html">Products</a>
+        </li>
+        <li class="nav__list-item">
+          <a href="/about.html">About Us</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+  <!-- page header end -->
+  <main class="main">
+    <h2 class="main__title">Home Page</h2>
+    <p>You are Welcome to our Music Store.You can find here different kind of Products.To find the best price and
+      quality product visit our
+      <a class="main__title-link" href="/products.html">Products</a>
+      page
+    </p>
+
+    <div class="category">
+      <h2 class="title"></h2>
+      <ul class="category__list">
+        <li class="category__list-item">Guitar</li>
+        <li class="category__list-item">Drum</li>
+        <li class="category__list-item">Piano</li>
+        <li class="category__list-item">Violin</li>
+      </ul>
+    </div>
+  </main>
 
 </body>
 
