refactor: fixed images

--- a/products.html
+++ b/products.html
@@ -62,9 +62,9 @@
       </div>
 
       <div class="product__card">
-        <img src="./images/guitar-1.webp" alt="Cremona SV-75 Premier Novice Series Violin Outfit"
+        <img src="./images/violin-3.jpg" alt="Rozanna's Violins Twinkle Star Pink Glitter Series Violin"
           class="product__card-img">
-        <p class="product__card-desc">Cremona SV-75 Premier Novice Series Violin Outfit</p>
+        <p class="product__card-desc">Rozanna's Violins Twinkle Star Pink Glitter Series Violin</p>
         <p class="product__card-price">$159.99</p>
       </div>
 
@@ -82,9 +82,9 @@
       </div>
 
       <div class="product__card">
-        <img src="./images/guitar-1.webp" alt="Recording King Dirty 30s 7 Single 0 Limited-Edition Lily"
+        <img src="./images/drum-3.webp" alt="X8 Drums Genesis Handpan D Kurd With Bag and Stand"
           class="product__card-img">
-        <p class="product__card-desc">Recording King Dirty 30s 7 Single 0 Limited-Edition Lily</p>
+        <p class="product__card-desc">X8 Drums Genesis Handpan D Kurd With Bag and Stand</p>
         <p class="product__card-price">$139.99</p>
       </div>
 
